<resources>
    <string name="app_name">Adviseursapp</string>
    <string name="action_settings">Settings</string>

    <!-- Login Activity   -->
    <string name="login_image_contentDescription">Product Logo</string>
    <string name="login_input_label_email">EMAIL</string>
    <string name="login_input_label_password">WACHTWOORD</string>
    <string name="login_button_text">LOGIN</string>
    <string name="login_snackbar_message_wrongCredentials">Inloggevens zijn niet correct, probeer het nog een keer</string>
    <string name="elbho_logo">ELBHO logo</string>

    <!-- Navigation Activity   -->
    <string name="navigation_overview">Afspraken</string>
    <string name="navigation_open_requests">Openstaande afspraken</string>
    <string name="navigation_upcoming_requests">Aanstaande afspraken</string>
    <string name="navigation_done_requests">Afgeronde afspraken</string>
    <string name="navigation_availability">Beschikbaarheid</string>
    <string name="navigation_vehicle">Auto reserveringen</string>
    <string name="navigation_vehicle_reserve">Auto reserveren</string>
    <string name="navigation_vehicle_reservation">Auto reservering</string>
    <string name="navigation_invoice">Facturen</string>
    <string name="navigation_open">Open menu</string>
    <string name="navigation_close">Sluit menu</string>
    <string name="navigation_app_title">ELBHO adviseursapp</string>
    <string name="navigation_title">Menu</string>

    <!--    -->
    <string name="temp_request">request</string>
    <string name="temp_tracking">tracking</string>
    <string name="title_vehicle">Gereserveerde auto\'s</string>
    <string name="button_rent_vehicle">Auto reserveren</string>
    <string name="title_invoice">Geüploade facturen</string>
    <string name="button_add_invoice">Factuur toevoegen</string>
    <string name="button_reserve_vehicle">Auto reserveren</string>
    <string name="logout">Uitloggen</string>
    <string name="logged_in_as"><![CDATA[Ingelogd als <b>%1$s %2$s</b>]]></string>

    <!-- Overview Activity  -->
    <string name="overview_tab_left_label">OPENSTAAND</string>
    <string name="overview_tab_middle_label">AANSTAAND</string>
    <string name="overview_tab_right_label">AFGEROND</string>
    <string name="overview_dateToday_text">26 November 2019</string>

    <!-- Request Fragment -->
    <string name="field_company_name">Bedrijfsnaam</string>
    <string name="field_company_address">Adres</string>
    <string name="field_contact_name">Contactpersoon</string>
    <string name="field_contact_title">Functie</string>
    <string name="field_contact_phone">Telefoon</string>
    <string name="field_contact_email">E-mail</string>
    <string name="field_appointment_date">Datum en Tijd</string>
    <string name="field_appointment_time">Tijd</string>
    <string name="field_appointment_notes">Opmerking</string>
    <string name="button_accept_appointment">Accepteren</string>
    <string name="button_deny_appointment">Afwijzen</string>
    <string name="button_leave">Vertrek</string>
    <string name="app_title_hasLeft">Vertrokken naar afspraak</string>
    <string name="snackbar_request_accepted">Afspraak met %s geaccepteerd</string>
    <string name="snackbar_request_denied">Afspraak met %s afgewezen</string>

    <!-- Fragment List Item -->
    <string name="listItem_text_day">DO</string>
    <string name="listITem_text_date">26–11</string>
    <string name="listItem_text_title">Simpel BV</string>
    <string name="listItem_text_description">20.00 – 13.15, Amsterdam</string>
    <string name="listItem_image_contentDescription">Clickable Icon to Detail page</string>
    <string name="invoice_listItem_image_contentDescription">Clickable Icon to download file</string>


    <!-- Fragment Vehicle -->
    <string name="vehicle_transmission_false">schakel</string>
    <string name="vehicle_transmission_true">automaat</string>
    <string name="icon_vehicle">Auto icoon</string>
    <string name="button_delete_claim">Reservering annuleren</string>
    <string name="car_location">Adres</string>
    <string name="car_licensePlate">Kenteken</string>
    <string name="car_reservation_time">Tijd</string>
    <string name="car_reservation_date">Datum</string>
    <string name="vehicle_delete_message">Wilt u deze reservering annuleren?</string>
    <string name="vehicle_delete_message_true">Ja</string>
    <string name="vehicle_delete_message_false">Nee</string>
    <string name="car_picture">ELBHO auto</string>
    <string name="map_picture">Locatie auto</string>
    <string name="vehicle_time_from">van</string>
    <string name="vehicle_time_to">tot</string>
    <string name="ic_dropdown">dropdown arrow</string>
    <string name="toast_start_before">Begin tijd moet eerder zijn dan de eind tijd.</string>
    <string name="toast_end_after">Eind tijd moet later zijn dan de begin tijd.</string>
    <string name="toast_select_car">Selecteer een auto.</string>
    <string name="toast_select_all_inputs">Selecteer begin en eind tijd om te reserveren.</string>
    <string name="confirm_reservation">Wil je deze auto reserveren?</string>
    <string name="alert_car_info">Auto:</string>
    <string name="alert_time_info">Tijd:</string>
    <string name="alert_date_info">Datum:</string>
    <string name="empty_time">--:--</string>
    <string name="hint_time">Time input</string>
    <string name="reserved_txt">gereserveerd:</string>
    <string name="snackbar_vehicle_reserved">Auto gereserveerd</string>
    <string name="snackbar_vehicle_cancelled">Auto reservering geannuleerd</string>
    <string name="toast_vehicle_already_reserved">Auto reservering niet gelukt voor deze begin en eind tijd</string>
    <string name="no_car_reservation">Geen auto"&apos;"s gereserveerd.</string>

    <!-- Create Availability Fragment  -->
    <string name="create_availability_saved">De nieuwe beschikbaarheid is opgeslagen</string>
    <string name="create_new_availability_title">Nieuwe beschikbaarheid</string>
    <string name="button_copy_week">Kopiëer week</string>
    <string name="availability_delete_contentDescription">Verwijder de beschikbaarheid op deze dag</string>
    <string name="availability_from">van</string>
    <string name="availability_to">tot</string>
    <string name="button_add_availability">Wijziging opslaan</string>
    <string name="copy_week_title">Week %d kopiëren naar</string>
    <string name="button_copy_week_confirm"><![CDATA[Kopiëren & opslaan]]></string>
    <string name="temp_copy_week"><b>Week %d</b>, %s tot %s</string>
    <string name="copy_week_saved">De beschikbaarheid is gekopiëerd</string>
    <string name="copy_week_title_bar">Week kopïeren</string>
    <string name="create_availability_week_selector">Week %d</string>

    <!-- Fragment Availability   -->
    <string name="availability_helper_text">Selecteer een dag om de beschikbaarheid van die week aan te passen</string>
    <string name="button_arrived">Bestemming bereikt</string>

    <!-- Invoice Fragment -->
    <string name="create_invoice_read_error">Het is niet gelukt om dit bestand in te lezen</string>
    <string name="create_invoice_choose_file">Kies een pdf-bestand</string>
    <string name="create_invoice_fields_empty">Een van de velden is leeg</string>
    <string name="create_invoice_select_month">Selecteer maand en jaar</string>
    <string name="invoices_creation_date">Geüpload op %s</string>
    <string name="icon_invoice">Factuur icoon</string>
    <string name="invoice_uploaded_on">Datum geüpload: 30/10/2019</string>
    <string name="invoice_cancel">Nee</string>
    <string name="invoice_download_message">Wilt u deze factuur downloaden?</string>
    <string name="invoice_download">Downloaden</string>
    <string name="add_new_invoice_title">Nieuwe factuur toevoegen</string>
    <string name="create_invoice_uploaded">De factuur is geüpload naar ELBHO</string>
    <string name="create_invoice_month">Maand en jaar</string>
    <string name="create_invoice_file">Bestand</string>
    <string name="create_invoice_error_not_acceptable">Gekozen maand ligt in de toekomst</string>
    <string name="invoice_server_not_yet_saved">Het bestand is niet beschikbaar op de server</string>

    <!-- Component Availability Input   -->
    <string name="input_placeholder">--:--</string>
    <string name="input_label_from">VAN</string>
    <string name="input_label_to">TOT</string>

    <!-- Location tracking -->
    <string name="location_snackbar_departed">Vertrokken naar de afspraak, uw locatie wordt bijgehouden</string>
    <string name="location_request_location_message">In het volgende scherm wordt gevraagd om je locatiegegevens. Deze zullen alleen bijgehouden worden als je onderweg bent naar een adres.</string>
    <string name="location_request_cancel">Annuleer</string>
    <string name="location_request_continue">Doorgaan</string>
    <string name="location_request_location_title">Locatiegegevens</string>

</resources>
