<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/listItem_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:background="@color/colorDisabledButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/availability_dayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/listItem_text_day"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/design_default_color_on_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/availability_dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/listITem_text_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/design_default_color_on_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/availability_dayText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/availability_time_from"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/availability_from"
        android:inputType="time"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/availability_time_to"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/availability_time_to"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/availability_to"
        android:inputType="time"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/availability_clear"
        app:layout_constraintStart_toEndOf="@+id/availability_time_from"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/availability_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/availability_delete_contentDescription"
        android:src="@drawable/ic_delete_red_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/availability_time_to"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>