<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/container_spacing"
    android:layout_marginBottom="@dimen/container_spacing"
    android:layout_marginTop="@dimen/container_spacing"
    android:layout_marginEnd="@dimen/container_spacing"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/material_card"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/swipe_to_refresh">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/icon_invoice"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_vehicle" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/title_vehicle"
                android:textAppearance="@style/CardTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/container_spacing"
        app:layout_constraintBottom_toTopOf="@+id/goVehicleReservation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/material_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:scrollbars="vertical"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/empty_view_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="visible"
                android:text="@string/no_car_reservation" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goVehicleReservation"
        style="@style/CustomMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_reserve_vehicle"
        app:backgroundTint="@color/colorPrimaryDark"
        app:icon="@drawable/ic_vehicle_reserve"
        app:iconGravity="textStart"
        app:iconPadding="16dp"
        app:iconSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
