<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/invoiceScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/container_spacing"
        android:layout_marginEnd="@dimen/container_spacing"
        android:layout_marginBottom="@dimen/container_spacing"
        app:layout_constraintBottom_toTopOf="@+id/create_invoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_invoice_year">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/invoiceYearTextView"
                    style="@style/FieldText"
                    android:inputType="datetime" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_invoice_month">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/invoiceMonthTextView"
                    style="@style/FieldText"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_invoice_file"
                app:endIconDrawable="@drawable/ic_cloud_upload_gray_24dp"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/invoiceFileTextView"
                    style="@style/FieldText" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_invoice"
        style="@style/CustomMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/container_spacing"
        android:text="@string/button_add_invoice"
        app:backgroundTint="@color/colorPrimaryDark"
        app:icon="@drawable/ic_add_white_24dp"
        app:iconGravity="textStart"
        app:iconPadding="16dp"
        app:iconSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>